# disc-xplorer

./: AGENTS.md  README.md  RELEASE_NOTES.md  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  SectorView.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/crates/iso9660/src/: fileref.rs  lib.rs  rock_ridge.rs
src-tauri/crates/iso9660/src/directory_entry/: isodirectory.rs  isofile.rs  mod.rs
src-tauri/crates/iso9660/src/parse/: date_time.rs  directory_entry.rs  volume_descriptor.rs
src-tauri/src/: cdi_filesystem.rs  fat_filesystem.rs  fatx_filesystem.rs  gcm_filesystem.rs  hfs_filesystem.rs  kryoflux.rs  lib.rs  pce_filesystem.rs  ps3.rs  threedo_filesystem.rs  udf_filesystem.rs  wux_reader.rs  wux_writer.rs  xdvdfs_filesystem.rs
