[package]
name = "tauri-app"
version = "0.9.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iso9660 = { path = "crates/iso9660" }
encoding_rs = "0.8"
flac-bound = { version = "0.3", features = ["libflac-nobuild"], default-features = false }
mp3lame-encoder = "0.2.4"
chd = { version = "0.3", features = ["cd_full"] }
flate2 = "1"
zstd = "0.13"
aes = "0.8"
cbc = "0.1"
fs2 = "0.4"
blake3 = "1"

